--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Node JS stuff
+package-lock.json
+node_modules
+
+# Program stuff
+uploaded_files/*
+!uploaded_files/DONOTDELETE
+
+
+
 # Logs
 logs
 *.log
